# grSim

./: CMakeLists.txt
.github/workflows/: build.yaml
clients/qt/: CMakeLists.txt  mainwindow.cpp
cmake/modules/: FindVarTypes.cmake
include/: configwidget.h  glwidget.h  sslworld.h
src/: sslworld.cpp
src/net/: robocup_ssl_server.cpp
